staging/settool-middleware-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https
  namespace: settool
spec:
  redirectScheme:
    scheme: https
    permanent: true
